[profile.dev]
debug = true   # Controls whether the compiler passes `-g`
opt-level = 0
split-debuginfo = "packed"

[package]
name = "chip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["cargo"] }
env_logger = "0.9.0"
getrandom = "0.2.7"
log = "0.4.17"
num = "0.4.0"
oorandom = "11.1.3"
sdl2= { version = "0.35.2", features = ["bundled"] }
